fixed about alignment

--- a/style.css
+++ b/style.css
@@ -87,6 +87,15 @@ header {
     width: 450px;
 }
 
+#aboutPhoto {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-weight: 400;
+    font-size: 20px;
+    width: 550px;
+}
+
 #photoCaption {
     display: flex;
     width: 420px;
